 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.totoros.pegapp.InfoFragment"
        android:id="@+id/infoFragment"
     android:weightSum="1"
     android:nestedScrollingEnabled="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/info_header"
            android:id="@+id/info_header"
            android:layout_gravity="center_horizontal|top"
            android:height="40dp"
            android:textStyle="bold" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/info_header2"
                android:id="@+id/info_header2"
            android:layout_gravity="center_horizontal"
            android:height="30dp"
            android:layout_weight="0.10"
            android:textStyle="bold" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_gravity="center_vertical|right"
         android:text="@string/info_1st_paragraph"
         android:id="@+id/info_1st_paragraph"
         android:layout_weight="0.06" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_gravity="center_horizontal|center"
         android:text="@string/info_2nd_paragraph"
         android:id="@+id/info_2nd_paragraph"
         android:layout_weight="0.68"
         android:height="@dimen/abc_text_size_display_3_material" />

     <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infoBackButton"
                android:id="@+id/infoBackButton"
                android:layout_gravity="center_horizontal|bottom" />

 </LinearLayout>