<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:background="@drawable/logo_final">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoButton"
        android:id="@+id/infoButton"
        android:layout_above="@+id/listButton"
        android:width="@android:dimen/thumbnail_width"
        android:clickable="false"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listButton"
        android:id="@+id/listButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/infoButton"
        android:layout_alignStart="@+id/infoButton"
        android:width="@android:dimen/thumbnail_width" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapButton"
        android:id="@+id/mapButton"
        android:layout_below="@+id/listButton"
        android:layout_alignLeft="@+id/listButton"
        android:layout_alignStart="@+id/listButton"
        android:layout_marginTop="54dp"
        android:width="@android:dimen/thumbnail_width" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeText"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/infoButton"
        android:layout_alignStart="@+id/infoButton" />



</RelativeLayout>
